--- a/styles.css
+++ b/styles.css
@@ -124,10 +124,10 @@ header.site {
 }
 
 img.sudo {
-  display: inline-block !important;
-  width: 25% !important;
-  border: 2px solid !important;
-  margin: 10px !important;
+  	display: flex;
+	width: 35% !important;
+	border: 2px solid !important;
+	margin: 10px !important;
 }
 
 .content { 
